Changes for 2.2.7rc1

Bug fixes:
........S. [ZBX-8414] fixed value cache statistics update when database contains only part of requested data (wiper)
........S. [ZBX-8414] fixed value cache single value request returning FAIL for not found items in low memory mode (wiper)
..F....... [ZBX-8616] fixed link to host items in Inventory->Hosts host view (Krists)

--------------------------------------------------------------------------------
Changes for 2.2.6

New features:
A.F....... [ZBX-1357] updated Chinese (Taiwan) and Polish translations; thanks to Zabbix translators (Richlv)

--------------------------------------------------------------------------------
Changes for 2.2.6rc1

New features:
..F....... [ZBX-8275] implemented web scenario cloning (Ivo)
A.......S. [ZBX-8473] improved performance of deleting triggers by API and server - events will be deleted only by the housekeeper (Krists, Sasha)
A.F....... [ZBX-1357] updated Brazilian Portuguese, Japanese, Polish, Slovak and Spanish translations; thanks to Zabbix translators (Richlv)

Bug fixes:
........S. [ZBX-7721] added support for discovering more than 100 hypervisors on large vcenter installations to vmware collector (wiper, dimir)
...G...PS. [ZBX-8629] fixed crash in get_string() function when checking "Database monitor" items (asaveljevs)
....IJ.... [ZBX-4800] replaced JSON.org library with Android JSON library; thanks to Volker Fröhlich for legal research (asaveljevs)
.........T [ZBX-4800] fixed typo in item name in "Template JMX Generic": "mpTenured" -> "mp Tenured" (asaveljevs)
.......PS. [ZBX-8488] fixed items being shown in queue with a delay of more than 44 years (asaveljevs)
........S. [ZBX-8444] increased the interval for checking sleeping escalations to improve performance (igors)
..F....PS. [ZBX-8608] added support of IP masks for action conditions (Sasha)
A......... [ZBX-8603] fixed web scenario fields "http_proxy" and "retries" not updating properly when linking template to host (Ivo)